--- a/ROS/ros_task2/ros_task2/ros_action/CMakeLists.txt
+++ b/ROS/ros_task2/ros_task2/ros_action/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(ros_task)
+project(ros_action)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,20 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(rclcpp_components REQUIRED)
-find_package(builtin_interfaces REQUIRED)
 find_package(ros_interfaces REQUIRED)
-
-add_executable(talker src/publisher.cpp)
-ament_target_dependencies(talker rclcpp builtin_interfaces)
-
-add_executable(listener src/subscriber.cpp)
-ament_target_dependencies(listener rclcpp builtin_interfaces)
-
-add_executable(service src/service.cpp)
-ament_target_dependencies(service rclcpp ros_interfaces)
-
-add_executable(client src/client.cpp)
-ament_target_dependencies(client rclcpp ros_interfaces)
 
 add_executable(action_server src/action_server.cpp)
 ament_target_dependencies(action_server rclcpp ros_interfaces rclcpp_action rclcpp_components)
@@ -31,13 +18,27 @@ ament_target_dependencies(action_server rclcpp ros_interfaces rclcpp_action rclc
 add_executable(action_client src/action_client.cpp)
 ament_target_dependencies(action_client rclcpp ros_interfaces rclcpp_action rclcpp_components)
 
+target_include_directories(
+    action_server
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>)
+
+target_include_directories(
+    action_client
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>)
+
 install(TARGETS
-  talker
-  listener
-  service
-  client
   action_server
   action_client
   DESTINATION lib/${PROJECT_NAME})
+
+
+install(DIRECTORY
+  config
+  launch
+  DESTINATION share/${PROJECT_NAME}/)
 
 ament_package()
