--- a/ROS/ros_task2/ros_task2/ros_service/package.xml
+++ b/ROS/ros_task2/ros_task2/ros_service/package.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros_task</name>
+  <name>ros_service</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="you@email.com">ubuntu</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclcpp</depend>
-  <depend>builtin_interfaces</depend>
   <depend>ros_interfaces</depend>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
